Misc tiny map fixes
 - Header links to home view
 - Add L to jshintrc globals
 - Fix multiselect width, when the app loads the original div
    width is too small, so we override js lib applied width with css

--- a/src/app/styles/atoms/_multiselect.scss
+++ b/src/app/styles/atoms/_multiselect.scss
@@ -2,8 +2,12 @@
     display: inline-block;
     position: relative;
     vertical-align: top;
-    min-width: 160px;
+    min-width: 160px !important;
     margin: 0 15px;
+
+    > button {
+        min-width: 160px !important;
+    }
 
     > .ms-choice {
         background: #999;
@@ -31,6 +35,7 @@
     }
     > .ms-drop {
         margin-top: 0;
+        min-width: 160px !important;
         border: 1px solid $light-gray;
         box-shadow: none;
         text-align: left;
